--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
      <% for(let i = 0; i < 4 ; i++){%>
         <h1><%= articleList[i].title  %></h1>
         <p><%= articleList[i].content %></p>
-        <p><%= articleList[i].creatAt %></p>
+        <p><%= articleList[i].createdAt %></p>
         <!-- <p><%= articleList[i].author %></p> aca iria el autor-->
         
 
