--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-</head>
+  </head>
 
-<body>
-   
-        <h1><%=article.title %></h1>
-        <p><%= article.content %></p>
-        
-        <p><%= `Creado por ${articleList[i].user.firstname} ${articleList[i].user.lastname} el ${article.createdAt}`%></p>
-       
-</body>
-
+  <body>
+    <div>
+      <h1><%=article.title %></h1>
+      <p><%= article.content %></p>
+      <p>
+        <%= `Creado por ${articleList[i].user.firstname} ${articleList[i].user.lastname} el
+        ${article.createdAt}`%>
+      </p>
+    </div>
+    <div></div>
+  </body>
 </html>
