--- a/views/article.ejs
+++ b/views/article.ejs
@@ -4,18 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <title>Home</title>
   </head>
-
   <body>
-    <div>
-      <h1><%=article.title %></h1>
-      <p><%= article.content %></p>
-      <p>
-        <%= `Creado por ${articleList[i].user.firstname} ${articleList[i].user.lastname} el
-        ${article.createdAt}`%>
-      </p>
-    </div>
-    <div></div>
+    <section class="container">
+      <div>
+        <h1><%=singleArticle.title %></h1>
+        <p><%=singleArticle.content %></p>
+        <p>
+          <%= `Creado por ${singleArticle.user.firstname} ${singleArticle.user.lastname} el
+          ${singleArticle.createdAt}`%>
+        </p>
+      </div>
+      <div>
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" aria-describedby="userName" />
+      </div>
+      <div class="form-floating">
+        <textarea
+          class="form-control"
+          placeholder="Leave a comment here"
+          id="floatingTextarea2"
+          style="height: 100px"
+        ></textarea>
+        <label for="floatingTextarea2">Comments</label>
+      </div>
+    </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
