--- a/views/article.ejs
+++ b/views/article.ejs
@@ -24,17 +24,22 @@
       </div>
       <form method="post" action="/comentarios/store">
         <div>
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" aria-describedby="userName" />
+          <label for="fullname" class="form-label">Name</label>
+          <input
+            name="fullname"
+            type="text"
+            class="form-control"
+            id="fullname"
+            aria-describedby="userName"
+          />
         </div>
         <div class="form-floating">
           <textarea
+            name="comment"
             class="form-control"
-            placeholder="Leave a comment here"
-            id="floatingTextarea2"
+            id="comment"
             style="height: 100px"
           ></textarea>
-          <label for="floatingTextarea2">Comments</label>
         </div>
         <div>
           <button type="submit" class="btn btn-primary">Submit</button>
