--- a/views/article.ejs
+++ b/views/article.ejs
@@ -24,12 +24,13 @@
       </div>
       <form method="post" action="/comentarios/store">
         <div>
-          <label for="fullname" class="form-label">Name</label>
+          <label for="fullname" class="form-label">Add your comment</label>
           <input
             name="fullname"
             type="text"
             class="form-control"
             id="fullname"
+            placeholder="Name"
             aria-describedby="userName"
           />
         </div>
