--- a/views/article.ejs
+++ b/views/article.ejs
@@ -22,7 +22,7 @@
           ${singleArticle.createdAt}`%>
         </p>
       </div>
-      <form method="post" action="/comentarios/store">
+      <form method="post" action="/comentarios">
         <div>
           <label for="fullname" class="form-label">Add your comment</label>
           <input
@@ -36,17 +36,23 @@
         </div>
         <div class="form-floating">
           <textarea
-            name="comment"
+            name="content"
             class="form-control"
-            id="comment"
+            id="content"
             style="height: 100px"
           ></textarea>
         </div>
         <div>
+          <input type="hidden" name="id" value="<%=id%>">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
+      <div>
+        <h2>Comments</h2>
+        
+      </div>
     </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
