--- a/views/article.ejs
+++ b/views/article.ejs
@@ -49,7 +49,13 @@
       </form>
       <div>
         <h2>Comments</h2>
-        
+        <% for(const comment of comments){%>
+          <p><%= comment.content %></p>
+          <p><%= comment.fullname %></p>
+          <% } %>
+         
+
+         
       </div>
     </section>
 
