--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-</head>
-<body>
-     <% for(let i = 0; i < 1 ; i++){%>
-        <h1><%=articleList[i].title  %></h1>
-        <p><%= articleList[i].content %></p>
-        <p><%= articleList[i].createdAt %></p>
-        <p><%= `${articleList[i].user.firstname} ${articleList[i].user.lastname}` %></p> 
-        <% } %>
-</body>
+  </head>
+  <body>
+    <% for(let i = 0; i < 10 ; i++){%>
+    <h1><%=articleList[i].title %></h1>
+    <p><%= articleList[i].content %></p>
+    <p><%= articleList[i].createdAt %></p>
+    <p><%= `${articleList[i].user.firstname} ${articleList[i].user.lastname}` %></p>
+    <% } %>
+  </body>
 </html>
