--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -19,7 +19,7 @@
           <h1>Articles</h1>
         </div>
         <div>
-          <a class="btn btn-success" href="/articulos/crear" role="button"> New </a>
+          <a class="btn btn-success" href="/articulos/crear" role="button"> Nuevo </a>
         </div>
       </div>
       <div class="mt-3">
@@ -49,16 +49,17 @@
                   <div>
                     <a
                       class="btn btn-primary btn-sm"
-                      href="/usuarios/editar/<%= adminList[i].id %>"
+                      href="/articulos/<%= adminList[i].id %>/editar"
                       role="button"
                     >
                       Edit
                     </a>
                   </div>
                   <div>
+                    <input type="hidden" name="id" value="adminList[i].id">
                     <a
                       class="btn btn-danger btn-sm"
-                      href="/usuarios/eliminar/<%= adminList[i].id %>"
+                      href="/articulos/eliminar/<%=adminList[i].id%>"
                       role="button"
                     >
                       Delete
