--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -40,9 +40,18 @@
             <tr>
               <th scope="row"><%= adminList[i].id %></th>
               <td><%= adminList[i].title %></td>
-              <td><%=adminList[i].content.slice(0,60)+ "..." %></td>
-              <td><%= adminList[i].image %></td>
-              <td><%= format(new Date(String(adminList[i].createdAt)), "yyyy'-'MM'-'dd kk:mm:ss"); %></td>
+              <td><%=adminList[i].content.slice(0,200)+ "..." %></td>
+              <td>
+                <img
+                  style="max-width: 100px"
+                  class="img-fluid"
+                  src="<%= adminList[i].image %>"
+                  alt="Article image"
+                />
+              </td>
+              <td>
+                <%= format(new Date(String(adminList[i].createdAt)), "yyyy'-'MM'-'dd kk:mm:ss"); %>
+              </td>
               <td><%= `${adminList[i].user.firstname} ${adminList[i].user.lastname}` %></td>
               <td>
                 <div class="gap-2 d-flex justify-content-center">
@@ -56,7 +65,7 @@
                     </a>
                   </div>
                   <div>
-                    <input type="hidden" name="id" value="adminList[i].id">
+                    <input type="hidden" name="id" value="adminList[i].id" />
                     <a
                       class="btn btn-danger btn-sm"
                       href="/articulos/eliminar/<%=adminList[i].id%>"
