--- a/views/adminEdit.ejs
+++ b/views/adminEdit.ejs
@@ -30,23 +30,35 @@
             />
           </div>
           <div class="mt-3">
-            <label for="content" class="form-label">Content</label>
-            <textarea
-              value="<%= singleArticle.content %>"
-              name="content"
+            <label for="author" class="form-label">Author</label>
+            <input
+              value="<%=`${singleArticle.user.firstname} `%>"
+              name="authorFirst"
+              type="text"
               class="form-control"
-              id="content"
-            >
+              id="author"
+            />
+          </div>
+          <div class="mt-3">
+            <label for="content" class="form-label">Content</label>
+            <textarea style="height: 300px" name="content" class="form-control" id="content">
+            <%= singleArticle.content %>
             </textarea>
           </div>
           <div class="mt-3">
-            <label for="age" class="form-label">Edad</label>
+            <label for="image" class="form-label">Image</label>
             <input
-              value="<%= singleArticle.age %>"
-              name="age"
-              type="number"
+              placeholder="Insert image URL"
+              name="image"
+              type="text"
               class="form-control"
-              id="age"
+              id="image"
+            />
+            <img
+              style="max-width: 150px"
+              class="img-fluid mt-2"
+              src="<%= singleArticle.image %>"
+              alt="Article image"
             />
           </div>
           <div class="mt-3">
