--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <% for(let i = 0; i < 10 ; i++){%>
-    <h1><%=articleList[i].title %></h1>
+   <h2><a href="<%=`${articleList[i].id}`%>"><%=articleList[i].title %></a></h2>
     <p><%= articleList[i].content %></p>
     <p>
       <%="Creado por "+ articleList[i].user.firstname +" "+ articleList[i].user.lastname + " el " +
