--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
     <title>Home</title>
   </head>
   <body>
-    <% for(let i = 0; i < 10 ; i++){%>
+    <% for(let i = 0; i < articleList.length ; i++){%>
    <h2><a href="<%=`${articleList[i].id}`%>"><%=articleList[i].title %></a></h2>
     <p><%= articleList[i].content %></p>
     <p>
