--- a/views/adminEdit.ejs
+++ b/views/adminEdit.ejs
@@ -15,7 +15,11 @@
   <body>
     <section class="container">
       <div class="mt-5 shadow p-4 rounded">
-        <form method="post" action="/articulos/<%= singleArticle.id %>/editar">
+        <form
+          method="post"
+          action="/articulos/<%= singleArticle.id %>/editar"
+          enctype="multipart/form-data"
+        >
           <div>
             <h1>Editar artículo</h1>
           </div>
@@ -30,16 +34,6 @@
             />
           </div>
           <div class="mt-3">
-            <label for="author" class="form-label">Author</label>
-            <input
-              value="<%=`${singleArticle.user.firstname} `%>"
-              name="authorFirst"
-              type="text"
-              class="form-control"
-              id="author"
-            />
-          </div>
-          <div class="mt-3">
             <label for="content" class="form-label">Content</label>
             <textarea style="height: 300px" name="content" class="form-control" id="content">
             <%= singleArticle.content %>
@@ -47,13 +41,7 @@
           </div>
           <div class="mt-3">
             <label for="image" class="form-label">Image</label>
-            <input
-              placeholder="Insert image URL"
-              name="image"
-              type="text"
-              class="form-control"
-              id="image"
-            />
+            <input name="image" class="form-control" type="file" id="image" />
             <img
               style="max-width: 150px"
               class="img-fluid mt-2"
