--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,16 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <title>Home</title>
   </head>
   <body>
-    <% for(let i = 0; i < articleList.length ; i++){%>
-   <h2><a href="<%=`${articleList[i].id}`%>"><%=articleList[i].title %></a></h2>
-    <p><%= articleList[i].content %></p>
-    <p>
-      <%="Creado por "+ articleList[i].user.firstname +" "+ articleList[i].user.lastname + " el " +
-      format(new Date(String(articleList[i].createdAt)), "dd' de 'MMMM', 'yyyy", {locale: es}) %>
-    </p>
-    <% } %>
+    <section><%- include("partials/navbar") %></section>
+    <div
+      class="text-center py-5 bg-image container-fuid"
+      style="
+        background-repeat: no-repeat;
+        height: 260px;
+        background-image: url(https://images.pexels.com/photos/2101704/pexels-photo-2101704.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+      "
+    >
+      <div>
+        <h1>Hack the blog</h1>
+      </div>
+      <div>
+        <p>El Blog de Hack Academy</p>
+      </div>
+    </div>
+    <section class="container">
+      <% for(let i = 0; i < 10 ; i++){%>
+      <h2><a href="<%=`${articleList[i].id}`%>"><%=articleList[i].title %></a></h2>
+      <p>
+        <%="Creado por "+ articleList[i].user.firstname +" "+ articleList[i].user.lastname + " el "
+        + format(new Date(String(articleList[i].createdAt)), "dd' de 'MMMM', 'yyyy", {locale: es})
+        %>
+      </p>
+      <% } %>
+    </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
