--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,16 +29,17 @@
         <p>El Blog de Hack Academy</p>
       </div>
     </div>
-    <section class="container">
-      <% for(let i = 0; i < 10 ; i++){%>
-      <h2><a href="<%=`${articleList[i].id}`%>"><%=articleList[i].title %></a></h2>
-      <p>
-        <%="Creado por "+ articleList[i].user.firstname +" "+ articleList[i].user.lastname + " el "
-        + format(new Date(String(articleList[i].createdAt)), "dd' de 'MMMM', 'yyyy", {locale: es})
-        %>
-      </p>
-      <% } %>
-    </section>
+    <main class="container">
+      <% for(const article in articleList) {%>
+        <h2><a href="/<%=articleList[article].id%>"><%= articleList[article].title%></a></h2>
+        <p> 
+          <%="Creado por "+ articleList[article].user.firstname +" "+ articleList[article].user.lastname + " el "
+                + format(new Date(String(articleList[article].createdAt)), " dd' de 'MMMM' , 'yyyy", {locale: es})
+          %>
+        </p>
+
+        <% } %>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
