--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,14 +31,14 @@
     </div>
     <main class="container">
       <% for(const article in articleList) {%>
-        <h2><a href="/<%=articleList[article].id%>"><%= articleList[article].title%></a></h2>
-        <p> 
-          <%="Creado por "+ articleList[article].user.firstname +" "+ articleList[article].user.lastname + " el "
-                + format(new Date(String(articleList[article].createdAt)), " dd' de 'MMMM' , 'yyyy", {locale: es})
-          %>
-        </p>
+      <h2><a href="/<%=articleList[article].id%>"><%= articleList[article].title%></a></h2>
+      <p>
+        <%="Creado por "+ articleList[article].user.firstname +" "+
+        articleList[article].user.lastname + " el " + format(new
+        Date(String(articleList[article].createdAt)), " dd' de 'MMMM' , 'yyyy", {locale: es}) %>
+      </p>
 
-        <% } %>
+      <% } %>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
