--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <div
-  class="text-center py-5 bg-image d-flex justify-content-center"
+  class="text-center py-5 bg-image"
   style="
     background-repeat: no-repeat;
     background-size: cover;
