--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,24 @@
   </head>
   <body>
     <section><%- include("partials/navbar") %></section>
-    <%- include("partials/header") %>
+
+    <div
+      class="text-center py-5 bg-image"
+      style="
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 260px;
+        background-image: url(https://images.pexels.com/photos/2101704/pexels-photo-2101704.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+      "
+    >
+      <div>
+        <h1 style="color: white">Hack the blog</h1>
+      </div>
+      <div>
+        <p style="color: white">El Blog de Hack Academy</p>
+      </div>
+    </div>
+
     <main class="container">
       <% for(const article in articleList) {%>
       <h2>
