--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,13 +4,16 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 260px;
-    background-image: url(https://images.pexels.com/photos/2101704/pexels-photo-2101704.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-image: url(/public/img/<%=singleArticle.image%>);
   "
 >
   <div>
-    <h1>Hack the blog</h1>
+    <h1 style="color: white"><%= singleArticle.title %></h1>
   </div>
   <div>
-    <p>El Blog de Hack Academy</p>
+    <p style="color: white">
+      <%="Creado por "+ singleArticle.user.firstname +" "+ singleArticle.user.lastname + " el " +
+      format(new Date(String(singleArticle.createdAt)), " dd' de 'MMMM' , 'yyyy", {locale: es}) %>
+    </p>
   </div>
 </div>
