Botón volver para página admin

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 260px;
-    background-image: url(/public/img/<%=singleArticle.image%>);
+    background-image: url('/img/<%=singleArticle.image%>');
   "
 >
   <div>
