--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -81,6 +81,9 @@
           </tbody>
         </table>
       </div>
+      <div class="mt-3 mb-5">
+        <a href="/articulos">Volver</a>
+      </div>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
