--- a/views/adminCreate.ejs
+++ b/views/adminCreate.ejs
@@ -1,58 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <title>Editar artículo</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <section class="container">
-        <div class="mt-5 shadow p-4 rounded">
-            <form method="post" action="/articulos/" enctype="multipart/form-data">
-                <div>
-                    <h1>Crear artículo</h1>
-                </div>
-                <div class="mt-3">
-                    <label for="title" class="form-label">Title</label>
-                    <input value="" name="title" type="text" class="form-control"
-                        id="title" />
-                </div>
-                <div class="mt-3">
-                    <legend>Author</legend>
-                    <label for="title" class="form-label">Firstname</label>
-                    <input value="" name="firstname" type="text" class="form-control" id="firstname" />
-                    <label for="title" class="form-label">Lastname</label>
-                    <input value="" name="lastname" type="text" class="form-control" id="lastname" />
-                </div>
-                <div class="mt-3">
-                    <label for="content" class="form-label">Content</label>
-                    <textarea style="height: 300px" name="content" class="form-control" id="content"></textarea>
-                </div>
-                <div class="mt-3">
-                    <label for="image" class="form-label">Image</label>
-                    <input name="image" class="form-control" type="file" id="image" />
-                    <img style="max-width: 150px" class="img-fluid mt-2" src=""
-                        alt="Article image"/>
-                </div>
-                <div class="mt-3">
-                    <button id="btnSubmit" type="submit" class="btn btn-success">Create</button>
-                </div>
-            </form>
-        </div>
-        <div class="mt-3">
-            <a href="/usuarios">Volver</a>
-        </div>
+      <div class="mt-5 shadow p-4 rounded">
+        <form method="post" action="/articulos/" enctype="multipart/form-data">
+          <div>
+            <h1>Crear artículo</h1>
+          </div>
+          <div class="mt-3">
+            <label for="title" class="form-label">Title</label>
+            <input value="" name="title" type="text" class="form-control" id="title" />
+          </div>
+          <div class="mt-3">
+            <legend>Author</legend>
+            <label for="title" class="form-label">Firstname</label>
+            <input value="" name="firstname" type="text" class="form-control" id="firstname" />
+            <label for="title" class="form-label">Lastname</label>
+            <input value="" name="lastname" type="text" class="form-control" id="lastname" />
+          </div>
+          <div class="mt-3">
+            <label for="content" class="form-label">Content</label>
+            <textarea
+              style="height: 300px"
+              name="content"
+              class="form-control"
+              id="content"
+            ></textarea>
+          </div>
+          <div class="mt-3">
+            <label for="image" class="form-label">Image</label>
+            <input name="image" class="form-control" type="file" id="image" />
+            <img style="max-width: 150px" class="img-fluid mt-2" src="" alt="Article image" />
+          </div>
+          <div class="mt-3">
+            <button id="btnSubmit" type="submit" class="btn btn-success">Create</button>
+          </div>
+        </form>
+      </div>
+      <div class="mt-3 mb-5">
+        <a href="/admin">Volver</a>
+      </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="/js/script.js"></script>
-</body>
-
+  </body>
 </html>
