--- a/views/adminEdit.ejs
+++ b/views/adminEdit.ejs
@@ -54,8 +54,8 @@
           </div>
         </form>
       </div>
-      <div class="mt-3">
-        <a href="/usuarios">Volver</a>
+      <div class="my-3">
+        <a href="/admin">Volver</a>
       </div>
     </section>
     <script
