--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +22,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         height: 260px;
-        background-image: url(https://images.pexels.com/photos/2101704/pexels-photo-2101704.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.pexels.com/photos/2101704/pexels-photo-2101704.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')
       "
     >
       <div>
@@ -39,7 +40,7 @@
           <h2>
             <a
               style="color: black; text-decoration: none; font-weight: bold"
-              href="/articulos/<%=articleList[article].id%>"
+              href="/<%=articleList[article].id%>"
               ><%= articleList[article].title%></a
             >
           </h2>
@@ -59,4 +60,5 @@
       crossorigin="anonymous"
     ></script>
   </body>
+  <%- include("partials/footer") %>
 </html>
