--- a/views/article.ejs
+++ b/views/article.ejs
@@ -13,10 +13,10 @@
     <title>Home</title>
   </head>
   <body>
-    <%- include("partials/header") %>
-    <section class="container">
+    <section><%- include("partials/navbar")%></section>
+    <section><%- include("partials/header") %></section>
+    <section class="container p-5">
       <div>
-        <h1><%=singleArticle.title %></h1>
         <p><%=singleArticle.content %></p>
         <p>
           <%= `Creado por ${singleArticle.user.firstname} ${singleArticle.user.lastname} el
@@ -24,39 +24,43 @@
         </p>
       </div>
       <form method="post" action="/comentarios">
+        <div class="pb-3">
+          <div>
+            <label for="fullname" class="form-label">Add your comment</label>
+            <input
+              name="fullname"
+              type="text"
+              class="form-control"
+              id="fullname"
+              placeholder="Name"
+              aria-describedby="userName"
+            />
+          </div>
+          <div class="form-floating">
+            <textarea
+              name="content"
+              class="form-control"
+              id="content"
+              style="height: 100px"
+            ></textarea>
+          </div>
+          <div>
+            <input type="hidden" name="id" value="<%=id%>" />
+            <button type="submit" class="btn btn-primary">Send</button>
+            <hr>
+          </div>
+        </form>
         <div>
-          <label for="fullname" class="form-label">Add your comment</label>
-          <input
-            name="fullname"
-            type="text"
-            class="form-control"
-            id="fullname"
-            placeholder="Name"
-            aria-describedby="userName"
-          />
+          <h2>Comments <%=`(${comments.length})`%></h2>
+          <% for(const comment of comments){%>
+          <p><%= comment.content %></p>
+          <p><%= comment.fullname %></p>
+          <% } %>
         </div>
-        <div class="form-floating">
-          <textarea
-            name="content"
-            class="form-control"
-            id="content"
-            style="height: 100px"
-          ></textarea>
         </div>
-        <div>
-          <input type="hidden" name="id" value="<%=id%>" />
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-      </form>
-      <div>
-        <h2>Comments <%=`(${comments.length})`%></h2>
-        <% for(const comment of comments){%>
-        <p><%= comment.content %></p>
-        <p><%= comment.fullname %></p>
-        <% } %>
-      </div>
+       
     </section>
-
+    <section><%- include("partials/footer")%></section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
