--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,11 @@
 <div
-  class="text-center justify-content-center py-5 bg-image"
+  class="text-center d-flex justify-content-center align-intems-center flex-column py-5 bg-image"
   style="
     background-repeat: no-repeat;
     background-size: cover;
     height: 260px;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/img/<%= singleArticle.image %>');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url('/img/<%= singleArticle.image %>');
   "
 >
   <div>
@@ -15,6 +16,5 @@
       <%="Creado por "+ singleArticle.user.firstname +" "+ singleArticle.user.lastname + " el " +
       format(new Date(String(singleArticle.createdAt)), " dd' de 'MMMM' , 'yyyy", {locale: es}) %>
     </p>
-    
   </div>
 </div>
