--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
           <h2>
             <a
               style="color: black; text-decoration: none; font-weight: bold"
-              href="/<%=articleList[article].id%>"
+              href="/articulos/<%=articleList[article].id%>"
               ><%= articleList[article].title%></a
             >
           </h2>
