--- a/views/article.ejs
+++ b/views/article.ejs
@@ -20,8 +20,9 @@
       <div>
         <p><%=singleArticle.content %></p>
       </div>
-      <form method="post" action="/comentarios">
-        <div class="pb-3">
+      <hr class="my-5" />
+      <div class="pb-4">
+        <form method="post" action="/comentarios">
           <div>
             <label for="fullname" class="form-label">Add your comment</label>
             <input
@@ -33,7 +34,7 @@
               aria-describedby="userName"
             />
           </div>
-          <div class="form-floating mt-3" >
+          <div class="form-floating mt-3">
             <textarea
               name="content"
               class="form-control"
@@ -43,15 +44,15 @@
           </div>
           <div class="mt-3 w-100">
             <input type="hidden" name="id" value="<%=id%>" />
-            <button type="submit" class="btn btn-primary">Send</button>
-            <hr />
+            <button type="submit" class="btn btn-primary d-grid">Send</button>
           </div>
+          <hr class="my-5" />
         </form>
         <div>
           <h2>Comments <%=`(${comments.length})`%></h2>
           <% for(const comment of comments){%>
           <p>"<%= comment.content %>"</p>
-          <p style="color:rgb(84, 84, 84); font-size: 80%;"><%= comment.fullname %></p>
+          <p style="color: rgb(84, 84, 84); font-size: 80%"><%= comment.fullname %></p>
           <% } %>
         </div>
       </div>
