--- a/views/article.ejs
+++ b/views/article.ejs
@@ -42,8 +42,10 @@
               style="height: 100px"
             ></textarea>
           </div>
-          <div class="mt-3 w-100">
+          <div class="mt-3">
             <input type="hidden" name="id" value="<%=id%>" />
+          </div>
+          <div class="d-flex flex-column">
             <button type="submit" class="btn btn-primary d-grid">Send</button>
           </div>
           <hr class="my-5" />
