--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,8 @@
         background-repeat: no-repeat;
         background-size: cover;
         height: 260px;
-        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.pexels.com/photos/2101704/pexels-photo-2101704.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+          url('https://images.pexels.com/photos/2101704/pexels-photo-2101704.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
       "
     >
       <div>
@@ -40,7 +41,7 @@
           <h2>
             <a
               style="color: black; text-decoration: none; font-weight: bold"
-              href="/<%=articleList[article].id%>"
+              href="/articulos/<%=articleList[article].id%>"
               ><%= articleList[article].title%></a
             >
           </h2>
