Preview de las imágenes en el Admin

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -46,7 +46,7 @@
                 <img
                   style="max-width: 100px"
                   class="img-fluid"
-                  src="<%= adminList[i].image %>"
+                  src="/img/<%= adminList[i].image %>"
                   alt="Article image"
                 />
               </td>
