--- a/views/adminEdit.ejs
+++ b/views/adminEdit.ejs
@@ -45,7 +45,7 @@
             <img
               style="max-width: 150px"
               class="img-fluid mt-2"
-              src="<%= singleArticle.image %>"
+              src="/img/<%= singleArticle.image %>"
               alt="Article image"
             />
           </div>
