--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar bg-dark">
   <div class="container">
-    <a style="color: white" href="/articulos" class="navbar-brand">Hack the blog</a>
-    <a href="/admin" class="btn btn-primary" role="button">Admin</a>
+    <a class="navbar-brand mb-0 h1 text-white" href="/articulos">Hack the blog</a>
+    <a class="btn btn-primary" href="/admin">Admin</a>
   </div>
 </nav>
