--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -14,7 +14,8 @@
     <title>Admin</title>
   </head>
   <body>
-    <section class="container">
+    <%- include("./partials/navbar.ejs") %>
+    <section class="container mt-5">
       <div class="d-flex justify-content-between mt-5">
         <div>
           <h1>Articles</h1>
@@ -24,7 +25,7 @@
         </div>
       </div>
       <div class="mt-3">
-        <table class="table table-striped text-center">
+        <table class="table table-striped">
           <thead>
             <tr>
               <th scope="col">ID</th>
@@ -50,10 +51,10 @@
                   alt="Article image"
                 />
               </td>
+              <td><%= articleList[article].createdAt %></td>
               <td>
-                <%= format(new Date(String(articleList[article].createdAt)), "yyyy'-'MM'-'dd kk:mm:ss"); %>
+                <%= articleList[article].user.firstname %> <%= articleList[article].user.lastname %>
               </td>
-              <td><%= `${articleList[article].user.firstname} ${articleList[article].user.lastname}` %></td>
               <td>
                 <div class="gap-2 d-flex justify-content-center">
                   <div>
@@ -69,7 +70,7 @@
                     <input type="hidden" name="id" value="articleList[article].id" />
                     <a
                       class="btn btn-danger btn-sm"
-                      href="/articulos/eliminar/<%=articleList[article].id%>"
+                      href="/articulos/eliminar/<%= articleList[article].id %>"
                       role="button"
                     >
                       Delete
