--- a/views/adminEdit.ejs
+++ b/views/adminEdit.ejs
@@ -13,6 +13,8 @@
     <title>Editar artículo</title>
   </head>
   <body>
+    <%- include("./partials/navbar.ejs") %>
+
     <section class="container">
       <div class="mt-5 shadow p-4 rounded">
         <form
@@ -26,10 +28,16 @@
           <div class="mt-3">
             <label for="title" class="form-label">Author</label>
           </div>
-            <div class="mt-3">
-              <label for="title" class="form-label">Title</label>
-              <input value="<%= singleArticle.title %>" name="title" type="text" class="form-control" id="title" />
-            </div>
+          <div class="mt-3">
+            <label for="title" class="form-label">Title</label>
+            <input
+              value="<%= singleArticle.title %>"
+              name="title"
+              type="text"
+              class="form-control"
+              id="title"
+            />
+          </div>
           <div class="mt-3">
             <label for="content" class="form-label">Content</label>
             <textarea style="height: 300px" name="content" class="form-control" id="content">
