--- a/views/article.ejs
+++ b/views/article.ejs
@@ -18,7 +18,7 @@
     <section><%- include("partials/header") %></section>
     <section class="container p-5 w-50">
       <div>
-        <p><%=singleArticle.content %></p>
+        <p><%=article.content %></p>
       </div>
       <hr class="my-5" />
       <div class="pb-4">
@@ -42,9 +42,7 @@
               style="height: 100px"
             ></textarea>
           </div>
-          <div class="mt-3">
-            <input type="hidden" name="id" value="<%=id%>" />
-          </div>
+
           <div class="d-flex flex-column">
             <button type="submit" class="btn btn-primary d-grid">Send</button>
           </div>
@@ -52,9 +50,9 @@
         </form>
         <div>
           <div class="mb-3">
-            <h4>Comments <%=`(${comments.length})`%></h4>
+            <h4>Comments <%=`(${article.comments.length})`%></h4>
           </div>
-          <% for(const comment of comments){%>
+          <% for(const comment of article.comments){%>
           <div>
             <p class="m-0">"<%= comment.content %>"</p>
             <p style="color: rgb(84, 84, 84); font-size: 90%; font-style: italic">
