--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,29 +36,28 @@
 
     <main class="container d-flex align-items-center justify-content-center">
       <div class="mt-5">
-        <% for(const article in articleList) {%>
+        <% for(const article of articles) {%>
         <div class="px-4 py-1">
           <h2>
             <a
               style="color: black; text-decoration: none; font-weight: bold"
-              href="/articulos/<%=articleList[article].id%>"
-              ><%= articleList[article].title%></a
+              href="/articulos/<%=article.id%>"
+              ><%= article.title%></a
             >
           </h2>
           <p style="color: grey; font-style: italic">
-            <%="Creado por "+ articleList[article].user.firstname +" "+
-            articleList[article].user.lastname + " el " + articleList[article].createdAt %>
+            Creado por <%= article.user.fullname%> el <%= format(article.createdAt, "dd 'de' MMMM' del ' yyyy", { locale: es }) %>
           </p>
         </div>
         <hr />
         <% } %>
       </div>
     </main>
+    <%- include("partials/footer") %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
   </body>
-  <%- include("partials/footer") %>
 </html>
