--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,31 +10,38 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+  </head>
   <body>
     <%- include("./partials/navbar.ejs") %>
     <div class="container my-5 p-5 shadow bg-white rounded">
-      <form>
+      <form method="post" action="/login">
         <h2>Login</h2>
-        <div class="my-3">        
+        <div class="my-3">
           <label for="email" class="form-label">Email address</label>
           <input
             type="email"
             class="form-control"
-            id="email"
+            name="email"
             aria-describedby="emailHelp"
             required
           />
-          <div id="emailHelp" class="form-text">
-            We'll never share your email with anyone else.
-          </div>
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" required />
+          <input type="password" class="form-control" name="password" required />
         </div>
-        <button type="submit" class="btn btn-primary">Log In</button>
+        <div class="d-flex justify-content-between pt-3">
+          <button type="submit" class="btn btn-primary">Log In</button>
+          <a href="/users/registro" class="btn btn-success">Registrarse</a>
+        </div>
       </form>
     </div>
     <%- include("partials/footer") %>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
