--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,31 +11,42 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+  </head>
   <body>
     <%- include("./partials/navbar.ejs") %>
     <div class="container my-5 p-5 shadow bg-white rounded">
-        <form>
-            <h2>Register</h2>
-            <div class="my-3">
-              <label for="name" class="form-label">Full Name</label>
-              <input type="text" class="form-control" id="name" required>
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-control" id="password" required>
-            </div>
-            <div class="mb-3">
-              <label for="confirm-password" class="form-label">Confirm Password</label>
-              <input type="password" class="form-control" id="confirm-password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-          </form>
-          
+      <form method="post">
+        <h2>Checka in</h2>
+        <div class="my-3">
+          <label for="name" class="form-label">Full Name</label>
+          <input type="text" class="form-control" name="fullname" required />
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email address</label>
+          <input
+            type="email"
+            class="form-control"
+            name="email"
+            aria-describedby="emailHelp"
+            required
+          />
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" name="password" required />
+        </div>
+        <div class="mb-3">
+          <label for="confirm-password" class="form-label">Confirm Password</label>
+          <input type="password" class="form-control" name="confirm-password" required />
+        </div>
+        <div class="d-flex justify-content-between">
+          <button type="submit" class="btn btn-primary">Bli Medlem</button>
+          <% if(messages) {%>
+          <p class="text-danger"><%= messages.info %></p>
+          <% } %>
+        </div>
+      </form>
     </div>
     <%- include("partials/footer") %>
   </body>
