auth implement, fix edit, fix login and fix signup, logout

--- a/views/adminEdit.ejs
+++ b/views/adminEdit.ejs
@@ -17,11 +17,7 @@
 
     <section class="container">
       <div class="mt-5 shadow p-4 rounded">
-        <form
-          method="post"
-          action="/articulos/<%= article.id %>/editar"
-          enctype="multipart/form-data"
-        >
+        <form method="post" enctype="multipart/form-data">
           <div>
             <h1>Editar artículo</h1>
           </div>
