--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -21,7 +21,7 @@
           <h1>Articles</h1>
         </div>
         <div>
-          <a class="btn btn-success" href="/articulos/crear" role="button"> Nuevo </a>
+          <a class="btn btn-success" href="/admin/crear" role="button"> Nuevo </a>
         </div>
       </div>
       <div class="mt-3">
@@ -58,7 +58,7 @@
                   <div>
                     <a
                       class="btn btn-primary btn-sm"
-                      href="/articulos/<%= article.id %>/editar"
+                      href="/admin/<%= article.id %>/editar"
                       role="button"
                     >
                       Edit
@@ -68,7 +68,7 @@
                     <input type="hidden" name="id" value="article.id" />
                     <a
                       class="btn btn-danger btn-sm"
-                      href="/articulos/eliminar/<%= article.id %>"
+                      href="/admin/eliminar/<%= article.id %>"
                       role="button"
                     >
                       Delete
@@ -82,7 +82,7 @@
         </table>
       </div>
       <div class="mt-3 mb-5">
-        <a href="/articulos">Volver</a>
+        <a href="/">Volver</a>
       </div>
     </section>
     <script
