--- a/views/adminEdit.ejs
+++ b/views/adminEdit.ejs
@@ -19,10 +19,7 @@
       <div class="mt-5 shadow p-4 rounded">
         <form method="post" enctype="multipart/form-data">
           <div>
-            <h1>Editar artículo</h1>
-          </div>
-          <div class="mt-3">
-            <label for="title" class="form-label">Author</label>
+            <h1>Edit article</h1>
           </div>
           <div class="mt-3">
             <label for="title" class="form-label">Title</label>
@@ -32,11 +29,18 @@
               type="text"
               class="form-control"
               id="title"
+              require
             />
           </div>
           <div class="mt-3">
             <label for="content" class="form-label">Content</label>
-            <textarea style="height: 300px" name="content" class="form-control" id="content">
+            <textarea
+              style="height: 300px"
+              name="content"
+              class="form-control"
+              id="content"
+              require
+            >
             <%= article.content %>
             </textarea>
           </div>
