--- a/views/article.ejs
+++ b/views/article.ejs
@@ -32,6 +32,7 @@
               name="content"
               class="form-control"
               id="content"
+              required
               style="height: 100px"
             ></textarea>
           </div>
@@ -43,7 +44,7 @@
         </form>
         <% } else { %>
         <div class="d-grid gap-2 my-5">
-          <h5>Inicia sesión para hacer un comentario</h5>
+          <h5>Login to write a comment</h5>
           <a class="btn btn-primary" href="/login">Login</a>
         </div>
         <% } %>
