--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <title>Admin</title>
+    <%- include("./partials/google.ejs") %>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-  <title>Admin</title>
-</head>
-
-<body>
-  <%- include("./partials/navbar.ejs") %>
+  <body>
+    <%- include("./partials/navbar.ejs") %>
     <section class="container mt-5">
       <div class="d-flex justify-content-between mt-5">
         <div>
@@ -37,42 +41,45 @@
           </thead>
           <tbody>
             <% for(const article of articles) { %>
-              <tr>
-                <th scope="row">
-                  <%= article.id %>
-                </th>
-                <td>
-                  <%= article.title %>
-                </td>
-                <td class="text-truncate" style="max-width: 300px">
-                  <%=article.content %>
-                </td>
-                <td>
-                  <img style="max-width: 100px" class="img-fluid" src="/img/<%= article.image %>" alt="Article image" />
-                </td>
-                <td>
-                  <%= format(article.createdAt, "yyyy'-'MM'-'dd hh:mm:ss" , { locale: es }) %>
-                </td>
-                <td>
-                  <%= article.user.fullname %>
-                </td>
-                <td>
-                  <div class="gap-2 d-flex justify-content-center">
-                    <div>
-                      <a class="btn btn-primary btn-sm" href="/admin/<%= article.id %>/editar" role="button">
-                        Edit
-                      </a>
-                    </div>
-                    <div>
-                      <input type="hidden" name="id" value="article.id" />
-                      <a class="btn btn-danger btn-sm" href="/admin/eliminar/<%= article.id %>" role="button">
-                        Delete
-                      </a>
-                    </div>
+            <tr>
+              <th scope="row"><%= article.id %></th>
+              <td><%= article.title %></td>
+              <td class="text-truncate" style="max-width: 300px"><%=article.content %></td>
+              <td>
+                <img
+                  style="max-width: 100px"
+                  class="img-fluid"
+                  src="/img/<%= article.image %>"
+                  alt="Article image"
+                />
+              </td>
+              <td><%= format(article.createdAt, "yyyy'-'MM'-'dd hh:mm:ss" , { locale: es }) %></td>
+              <td><%= article.user.fullname %></td>
+              <td>
+                <div class="gap-2 d-flex justify-content-center">
+                  <div>
+                    <a
+                      class="btn btn-primary btn-sm"
+                      href="/admin/<%= article.id %>/editar"
+                      role="button"
+                    >
+                      Edit
+                    </a>
                   </div>
-                </td>
-              </tr>
-              <% } %>
+                  <div>
+                    <input type="hidden" name="id" value="article.id" />
+                    <a
+                      class="btn btn-danger btn-sm"
+                      href="/admin/eliminar/<%= article.id %>"
+                      role="button"
+                    >
+                      Delete
+                    </a>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <% } %>
           </tbody>
         </table>
       </div>
@@ -80,11 +87,12 @@
         <a href="/">Go Back</a>
       </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
 
     <script src="/js/script.js"></script>
-</body>
-
+  </body>
 </html>
