--- a/views/adminCreate.ejs
+++ b/views/adminCreate.ejs
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <title>Create article</title>
+    <%- include("./partials/google.ejs") %>
   </head>
 
   <body>
