--- a/views/forbidden.ejs
+++ b/views/forbidden.ejs
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <title>Forbidden</title>
+    <%- include("./partials/google.ejs") %>
   </head>
   <body>
     <section><%- include("./partials/navbar.ejs") %></section>
