--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <title>Home</title>
+    <%- include("./partials/google.ejs")  %>
   </head>
   <body>
     <section><%- include("./partials/navbar.ejs") %></section>
