--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <%- include("./partials/google.ejs") %>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-</head>
-
-<body>
-  <%- include("./partials/navbar.ejs") %>
+  <body>
+    <%- include("./partials/navbar.ejs") %>
     <div class="container my-5 p-5 shadow bg-white rounded">
       <form method="post">
         <h2>Sign Up</h2>
@@ -21,7 +25,13 @@
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" name="email" aria-describedby="emailHelp" required />
+          <input
+            type="email"
+            class="form-control"
+            name="email"
+            aria-describedby="emailHelp"
+            required
+          />
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
@@ -35,14 +45,11 @@
         <div class="d-flex justify-content-between">
           <button type="submit" class="btn btn-primary">Sign Up</button>
           <% if(messages) {%>
-            <p class="text-danger">
-              <%= messages.info %>
-            </p>
-            <% } %>
+          <p class="text-danger"><%= messages.info %></p>
+          <% } %>
         </div>
       </form>
     </div>
     <%- include("partials/footer") %>
-</body>
-
+  </body>
 </html>
